Make a whole system more modular (#4)
Activities rework, modules system, random improvements